Update FederatedUpdateProvider.java